# CUDA-Optimization

./: README copy.md  README.md  test.py
Elementwise/: CMakeLists.txt  elementwise_dotmul_baseline.cu  elementwise_dotmul_v1.cu
Elementwise/compute/elementwise/: elementwise.ncu-proj
FastAtomicAdd/: CMakeLists.txt  fastatomicadd_baseline.cu  fastatomicadd_v1.cu
FastAtomicAdd/FastAtomicAdd_note/: FastAtomicAdd优化.md
FastAtomicAdd/FastAtomicAdd_note/.obsidian/: workspace.json
FastAtomicAdd/compute/FastAtomicAdd/: FastAtomicAdd.ncu-proj
Index/: CMakeLists.txt  index.py  index_v0.cu
Reduce/: CMakeLists.txt  reduce_baseline.cu  reduce_v1_interleaved_addressing.cu  reduce_v2_bank_conflict.cu  reduce_v3_Idel_thread.cu  reduce_v4_unrolling_the_last_warp.cu  reduce_v5_complete_unrolling.cu  reduce_v6.0_grid&block_size.cu  reduce_v6.1_grid&block_size.cu  reduce_v6.2_grid&block_size.cu  reduce_v7_shfl_down_sync.cu
Reduce/Reduce_note/: Reduce优化过程.md
Reduce/Reduce_note/.obsidian/: workspace.json
Reduce/compute/reduce/: reduce.ncu-proj
Sgemm/: CMakeLists.txt  Sgemm_baseline.cu  Sgemm_v0.cu  Sgemm_v1.cu  Sgemm_v2.cu  Sgemm_v2_2.cu  Sgemm_v2_3.cu  Sgemm_v3.cu  Sgemm_v4.cu  Sgemm_v4_2.cu  Sgemm_v5.cu  Sgemm_v6.cu  Sgemm_v7.cu  Sgemm_v8.cu
Sgemm/Sgemm_note/: Sgemm优化笔记.md
Sgemm/Sgemm_note/.obsidian/: workspace.json
Sgemm/compute/Sgemm/: Sgemm.ncu-proj
UpsampleNearst/: CMakeLists.txt  upsamplenearest_v1.cu  upsamplenearest_v2.cu  upsamplenearest_v3.cu  upsamplenearest_v4.cu  草稿.cu
UpsampleNearst/compute/upsamplenearest/: upsamplenearest.ncu-proj
curand_test/: CMakeLists.txt  curand_test_v0.cu  test.py
lec1_profile_CUDA_kernels/: pt_profiler.py  pytorch_square.py  triton_sample.py
lec1_profile_CUDA_kernels/Nsight Compute/: Night Compute.md
lec1_profile_CUDA_kernels/Nsight Compute/.obsidian/: workspace.json
lec1_profile_CUDA_kernels/log/: test_trace_4.pt.trace.json
